# aer

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .tool-versions  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  ROADMAP.md  compose.ci-images.yaml  compose.prod.yaml  compose.yaml  go.work  go.work.sum  mkdocs.public.yml  mkdocs.yml  ps_cheat_sheet.md
.github/workflows/: bandwidth_probe.yml  box-watchdog.yml  ci.yml  e2e_smoke_nightly.yml  release-images.yml  web-crawler-build.yml  wikidata_index_rebuild.yml
configs/cultural_calendars/: de.yaml  fr.yaml
crawlers/_archived/rss-crawler/: MIGRATED.md  feeds.yaml  main.go
crawlers/rss-crawler/: Dockerfile  feeds.yaml  go.mod  main.go  main_test.go
crawlers/rss-crawler/testdata/: sample_rss.xml
crawlers/web-crawler/: Dockerfile  audit_core.py  audit_datewalk.py  audit_pattern.py  audit_probe.py  audit_reaudit.py  audit_source.py  audit_yaml.py  main.py  pyproject.toml
crawlers/web-crawler/internal/: secret_files.py
crawlers/web-crawler/internal/discovery/: __init__.py  archive_index.py  html_sitemap.py  rss_hint.py  sitemap.py
crawlers/web-crawler/internal/fetch/: scrapy_spider.py
crawlers/web-crawler/internal/ingestion/: client.py
crawlers/web-crawler/internal/state/: dedup.py  discovery_runs.py  funnel_runs.py
crawlers/web-crawler/internal/translate/: contract.py
crawlers/web-crawler/probes/probe0/: sources.yaml
crawlers/web-crawler/probes/probe1/: sources.yaml
crawlers/web-crawler/tests/: _audit_helpers.py  conftest.py  test_audit_pattern.py  test_audit_source.py  test_completeness_declared.py  test_contract.py  test_dedup.py  test_discovery.py  test_discovery_archive_index.py  test_discovery_html_sitemap.py  test_discovery_runs.py  test_funnel_runs.py  test_ingestion_client.py  test_main.py  test_sitemap_direct_parse.py  test_url_filter.py
crawlers/wikipedia-scraper/: go.mod  main.go
docs/: developer_quickstart.md  index.md  operations_playbook.md  public_index.md  scientific_operations_guide.md
docs/arc42/: 00_manifesto.md  01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_risks_and_technical_debts.md  12_glossary.md  13_scientific_foundations.md
docs/assets/readme/: README.md
docs/design/: design_brief.md  design_system.md  reframing-note.md  visualization_guidelines.md  workbench_comparability.md
docs/development/: conventions.md  terminology-reconciliation-proposal.md
docs/extending/: README.md  add-a-language.md  add-a-probe.md  add-a-source-type.md  add-a-source.md  add-an-extractor.md  scalability-roadmap.md
docs/methodology/: LICENSE.md  WP-001-functional-probe-taxonomy.md  WP-001-toward_a_culturally_agnostic_probe_catalog-a_functional_taxonomy_for_global_discourse_observation.md  WP-004-cross-cultural_comparability_of_discourse_metrics.md  extractor_limitations.md  probe0_bias_profile.md  workbench_methodology_content_inventory.md
docs/methodology/de/: WP-002-de-metrik_validitaet_und_sentiment_kalibrierung.md  (+6 more)
docs/operations/: backup_restore.md  deploy_runbook.md  developer_quickstart.md  github_repository_configuration.md  monitoring.md  operations_playbook.md  quality_register.md  scheduled_work.md  scientific_operations_guide.md  wikidata_index_runbook.md
docs/probes/: _adding-a-probe-quickstart.md
docs/probes/probe-0-de-institutional-rss/: README.md  (+4 more)
docs/templates/: observer_effect_assessment.yaml  probe_registration_template.yaml  validation_study_template.yaml
infra/clickhouse/: init.sql  load_wikidata_labels.sh  migrate.sh
infra/config/: prod_config_audit.manifest
infra/minio/: setup.sh
infra/observability/: grafana-datasources.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
infra/postgres/: init-roles.sh  init.sql
infra/secrets/: secrets.manifest
infra/systemd/: aer-backup.service  aer-backup.timer  aer-crawl.service  aer-crawl.timer  aer-verify-ilm.service  aer-verify-ilm.timer
infra/wikidata-index/: Dockerfile  init.sh
pkg/: go.mod  go.sum
pkg/config/: config.go
pkg/logger/: logger.go  logger_test.go
pkg/middleware/: apikey.go  apikey_test.go  cache_control.go  cache_control_test.go  cors.go  observability.go  observability_test.go
pkg/secretfile/: secretfile.go  secretfile_test.go
pkg/telemetry/: otel.go  otel_test.go
pkg/testutils/: compose.go  compose_test.go
scripts/: backfill_article_id.py  backfill_bert_sentiment.py  backfill_entity_links.py  backfill_silver_projection.py  build_wikidata_index.py  clean_infra.sh  compute_baselines.py  deps_refresh.sh  e2e_smoke_test.sh  generate_metric_validity_scaffold.py  openapi_ref_style_check.sh  reconcile_documents.py  replay_bronze.py  requirements_wikidata_build.txt  reset_validate.sh  smoke_host.sh  start.sh  stop.sh  wikidata_validate.sh
scripts/audit/: bump_metadata_phase122j.py  inject_composition_notes.py  methodology_coverage.sh
scripts/e2e_fixtures/: feeds.yaml  test_feed.xml
scripts/hooks/: pre-commit  pre-push
scripts/operations/: _secret_lib.sh  _secret_synth.sh  backup.sh  clean.sh  clean_infra.sh  compute_baselines.py  config_audit.sh  deploy_pull.sh  gen_runtime_env.sh  preflight.sh  reextract_silver.py  reset_validate.sh  restore.sh  scheduled_crawl.sh  stage_secrets.sh  stage_secrets_local.sh  verify_ilm.sh
scripts/wikidata_fixtures/: wikidata_sample.nt
services/analysis-worker/: .coveragerc  Dockerfile  main.py  pip-audit-ignores.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  ruff.toml
services/bff-api/: Dockerfile  go.mod  go.sum
services/dashboard/: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  knip.json  lighthouserc.cjs  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
services/ingestion-api/: Dockerfile  go.mod  go.sum  main.go
(+1400 files in other folders)
