[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aer-web-crawler"
version = "0.1.0"
description = "AĒR generalised web crawler — Phase 122. Single configurable binary for every news-website probe."
authors = [{ name = "AĒR" }]
requires-python = ">=3.14"

# Dependencies are intentionally lean. Trafilatura, extruct, htmldate, and
# courlan run in the analysis worker, NOT here — Bronze is verbatim raw
# HTML per ADR-028.
dependencies = [
    "scrapy==2.13.3",
    "ultimate-sitemap-parser==1.4.0",
    "feedparser==6.0.11",
    "psycopg2-binary==2.9.11",
    "PyYAML==6.0.2",
    "requests==2.33.0",
    "structlog==25.5.0",
    # courlan is needed crawler-side too: dedup state is keyed on the
    # canonical URL so two different reflections of the same article
    # (with vs. without query string, http vs. https) collapse into one
    # row.
    "courlan==1.3.2",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "ruff==0.15.8"]

[project.scripts]
aer-web-crawler = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["internal*"]

[tool.ruff]
line-length = 120
target-version = "py314"
