[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aer-web-crawler"
version = "0.1.0"
description = "AĒR generalised web crawler — Phase 122. Single configurable binary for every news-website probe."
authors = [{ name = "AĒR" }]
requires-python = ">=3.14"

# Dependencies are intentionally lean. Trafilatura, extruct, htmldate, and
# courlan run in the analysis worker, NOT here — Bronze is verbatim raw
# HTML per ADR-028.
dependencies = [
    "scrapy==2.15.1",
    # Phase 122g supply-chain pin (2026-05-12). Scrapy 2.13.3 (and through
    # 2.15.2 at time of writing) imports `_setAcceptableProtocols` from
    # `twisted.internet._sslverify`. Twisted removed that symbol in 26.x.
    # Scrapy master has a fix (#7347, 2026-05-12) that has not yet shipped
    # to PyPI, so we pin Twisted to the last 25.x release explicitly.
    # Drop this pin once a Scrapy release ≥ 2.16.0 (or whatever ships
    # #7347) lands and we bump our scrapy pin.
    "twisted==25.5.0",
    "ultimate-sitemap-parser==1.4.0",
    "feedparser==6.0.11",
    "psycopg2-binary==2.9.11",
    "PyYAML==6.0.2",
    # Phase 122g — ruamel.yaml is used ONLY by the audit-source CLI for
    # in-place comment-preserving edits to probes/<probe>/sources.yaml
    # when an operator accepts a re-audit diff. The crawler runtime
    # itself reads YAML via PyYAML (faster, comment-blind, which is
    # exactly what we want at crawl time).
    "ruamel.yaml==0.18.6",
    "requests==2.34.2",
    "structlog==25.5.0",
    # courlan is needed crawler-side too: dedup state is keyed on the
    # canonical URL so two different reflections of the same article
    # (with vs. without query string, http vs. https) collapse into one
    # row.
    "courlan==1.3.2",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "ruff==0.15.8"]

[project.scripts]
aer-web-crawler = "main:cli"
# Phase 122g — operator-facing CLI that probes a candidate source's
# discovery surfaces and prints a suggested `discovery:` block for
# sources.yaml. Trafilatura-driven; degrades gracefully if trafilatura
# is unavailable (it lives in the worker venv, not the crawler venv).
aer-audit-source = "audit_source:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["internal*"]

[tool.ruff]
line-length = 120
target-version = "py314"
